@@ -1,0 +1,5 @@
+/* { dg-do run } */
+
+/* { dg-command {"foo\"bar"} } */
+/* { dg-output "\"foo\\\\"bar\"" } */
+
