@@ -1,0 +1,4 @@
+/* { dg-do run } */
+
+/* { dg-command {"foo\tbar"} } */
+/* { dg-output "\"foo\\\\tbar\"" } */
